# cob_navigation_ng_tests

./: README.md
cob_nav_testdata/: mainpage.dox  manifest.xml
cob_nav_testdata/launch/: record.launch
cob_navigation_ng_tests/: CMakeLists.txt  package.xml
cob_testcar/: mainpage.dox  manifest.xml
cob_testcar/config/: laser.yaml
cob_testcar/launch/: kinect.launch  laser.launch  rviz.conf.rviz  rviz.launch  testcar.launch
cob_testcar/urdf/: testcar.urdf.xacro  testcar.urdx.xacro
ipa_simulation_tests/: CMakeLists.txt  package.xml
ipa_simulation_tests/config/: testcase.yaml  testcase_florian.yaml  testcase_stefan.yaml
ipa_simulation_tests/launch/: testcase.launch
ipa_simulation_tests/src/: run_tests.py
ubisense_tests/: CMakeLists.txt  package.xml
ubisense_tests/launch/: test_data_dumps.launch  test_data_dumps.test
